--- a/css/accesibilidad.css
+++ b/css/accesibilidad.css
@@ -16,7 +16,7 @@
     left: -35px;
     top: 0;
     content: '';
-    background-image: url(../images/access-icon.jpg);
+    background-image: url(https://talleralistamientodirlaborunalmzl.github.io/solicitudes/Images/access-icon.jpg);
     width: 35px;
     height: 35px
 }
